# CIN-Requirements

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  ce92af15d062_add_project_document_section_models.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  ai.py  auth.py  document_management.py  documents.py  media.py  projects.py  sessions.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  document.py  document_version.py  media.py  message.py  project.py  section.py  section_binding.py  session.py  user.py
backend/app/schemas/: __init__.py  ai.py  document.py  project.py  section.py  session.py  user.py
backend/app/services/: __init__.py  ai_provider.py  claude_service.py  document_generator.py  document_importer.py  storage_service.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_documents.py  test_projects.py  test_sessions.py
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/ai/: ChatPanel.tsx  MessageBubble.tsx  QuestionnaireCard.tsx
frontend/src/lib/: api.ts  auth.ts  liveblocks.ts  utils.ts
frontend/src/lib/hooks/: useAI.ts  (+3 more)
frontend/src/providers/: AuthProvider.tsx  LiveblocksProvider.tsx
frontend/src/types/: index.ts
(+12 files in other folders)
